--- a/index.css
+++ b/index.css
@@ -8,23 +8,23 @@
 }
 
 a {
-
     text-decoration: none;
     color: black;
-
 }
 
 img {
     max-width: 100%;
-    height: 50%;
-    width: 50%;
+    
+    height: auto;
+    width: auto;
+
+    border: 1px rgba(0, 0, 0, 0.24) solid;
+    border-radius: 2px;
 }
 
 #project-wrapper {
-    display: inline-flex;
-    justify-content: center;
-
-    margin: 12px;
+    display: flex;
+    justify-content: left;
 
     flex-wrap: wrap;
 
@@ -34,30 +34,29 @@ img {
     display: block;
 
     margin: 12px;
-    padding: 1em;
+    padding: 12px;
 
-    min-width: 26vh;
-    max-width: 26vh;
+    min-width: 28vh;
+    max-width: 28vh;
 
-    /* match largest card height */
-    height: 100%;
-
+    min-height: 93%;
+    max-height: 93%;
 
     border-radius: 10px;
     border: 2px rgba(0, 0, 0, 0.24) dashed;
 
     text-align: center;
+
 }
 
 .header {
     /* can comment out as parent class already has text-align: center applied */
     /* text-align: center;  */
 
-    font-size: 1.6vh;
 }
 
-#published {
-    font-size: 1.4vh;
+#desc {
+
 }
 
 .content {
@@ -66,7 +65,7 @@ img {
 
     flex-wrap: wrap;
 
-    font-size: 1.4vh;
+
 }
 
 .tags {
@@ -74,7 +73,7 @@ img {
 
     padding-left: 10px;
     padding-right: 10px;
-    
+
     padding-top: 1px;
     padding-bottom: 1px;
 
@@ -85,4 +84,27 @@ img {
 .project:hover {
     border-radius: 10px;
     border: 2px rgb(0, 0, 0) dashed;
+}
+
+#links:hover {
+    background-color: rgba(0, 0, 0, 0.24);
+}
+
+#general-wrapper {
+    margin: 15px;
+    
+    margin-top: 10px;
+    margin-bottom: 0;
+}
+
+footer {
+    display: block;
+    margin: 15px;
+    
+    margin-top: 10px;
+    margin-bottom: 0;    
+}
+
+.links:hover {
+    font-weight: bold;
 }
