--- a/index.css
+++ b/index.css
@@ -3,108 +3,29 @@
     margin: 0;
     padding: 0;
 
-    font-family: Arial, Helvetica, sans-serif;
-
+    font-family: 'Times New Roman', Times, serif;
 }
 
 a {
     text-decoration: none;
     color: black;
+    font-weight: bold;
 }
 
-img {
-    max-width: 100%;
-    
-    height: auto;
-    width: auto;
-
-    border: 1px rgba(0, 0, 0, 0.24) solid;
-    border-radius: 2px;
-}
-
-#project-wrapper {
-    display: flex;
-    justify-content: left;
-
-    flex-wrap: wrap;
-
-}
-
-.project {
-    display: block;
-
-    margin: 12px;
-    padding: 12px;
-
-    min-width: 28vh;
-    max-width: 28vh;
-
-    min-height: 93%;
-    max-height: 93%;
-
-    border-radius: 10px;
-    border: 2px rgba(0, 0, 0, 0.24) dashed;
-
-    text-align: center;
-
-}
-
-.header {
-    /* can comment out as parent class already has text-align: center applied */
-    /* text-align: center;  */
-
-}
-
-#desc {
-
+body {
+    margin: 10px;
 }
 
 .content {
     display: flex;
-    justify-content: center;
-
-    flex-wrap: wrap;
-
-
+    flex-direction: column;
 }
 
-.tags {
-    margin: 3px;
-
-    padding-left: 10px;
-    padding-right: 10px;
-
-    padding-top: 1px;
-    padding-bottom: 1px;
-
-    border: 1px black solid;
-    border-radius: 14px;
-}
-
-.project:hover {
-    border-radius: 10px;
-    border: 2px rgb(0, 0, 0) dashed;
-}
-
-#links:hover {
-    background-color: rgba(0, 0, 0, 0.24);
-}
-
-#general-wrapper {
-    margin: 15px;
-    
-    margin-top: 10px;
-    margin-bottom: 0;
-}
-
-footer {
+.footer {
     display: block;
-    margin: 15px;
-    
-    margin-top: 10px;
-    margin-bottom: 0;    
-}
+    position: absolute;
+    bottom: 0;
 
-.links:hover {
-    font-weight: bold;
+    margin-bottom: 6px;
+    font-size: smaller;
 }
